# cmsc_701_assignment_1

./: .gitignore  Cargo.toml  README.md
benches/: benchmark_search.rs
benches/data/: mixed_queries.fasta
scripts/: clean_sequence.py  run_experiment.py
src/: args.rs  lib.rs  prefix_table.rs  reader.rs  record.rs  search.rs  suffix_array.rs
