[package]
name = "assignment_1"
version = "0.1.0"
description = "A short description"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.1.6", features = ["cargo", "derive"] }
criterion = "0.4.0"
eyre = "0.6.8"
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
suffix = "1.3.0"

[[bench]]
name = "benchmark_search"
harness = false
